Fixed rounded submit graphic buttons on iOS ("Post Comment").
git-svn-id: file:///Users/michael/repos-aroundtheworld/trunk@553 f54931ca-e29a-4586-8446-2c8b6a4cd0ca

--- a/wp-content/themes/480days/style.css
+++ b/wp-content/themes/480days/style.css
@@ -75,6 +75,13 @@ a:link, a:visited, a:hover, a:active
 }
 
 
+input, textarea 	/* to fix rounded submit buttons in ios */
+	{
+  	-webkit-appearance: none;
+  	-webkit-border-radius: 0;
+	}
+
+
 
 
 
@@ -1404,8 +1411,6 @@ a:link, a:visited, a:hover, a:active
 	{
 	position: relative;
 	float: left;
-	width: 7px;
-	height: 7px;
 	margin: -2px 0 0 -19px;
 	}	
 
